--- a/static/css/network.css
+++ b/static/css/network.css
@@ -24,7 +24,7 @@
     border-style: solid;
     border-width: 2px;
     border-color: #fff;
-    height: 70px;
+    height: 90px;
     width: 200px;
     pointer-events: none;
 }
